--- a/plf_config.yaml
+++ b/plf_config.yaml
@@ -6,7 +6,7 @@
 "SKU": "OE_PATTERNS_PEERTUBE"
 "Software by": "Ordinary Experts"
 "Title": "Ordinary Experts PeerTube Pattern"
-"Short Description": "The Ordinary Experts PeerTube Pattern is a custom AMI + open-source AWS CloudFormation template that provisions a production-ready, AWS infrastructure solution for deploying PeerTube v5.1.0."
+"Short Description": "The Ordinary Experts PeerTube Pattern is a custom AMI + open-source AWS CloudFormation template that provisions a production-ready, AWS infrastructure solution for deploying PeerTube v5.2.0."
 "Full Description": "The Ordinary Experts PeerTube Pattern is an open-source AWS CloudFormation template that offers an easy-to-install AWS infrastructure solution for quickly deploying PeerTube, using both AWS and PeerTube best practices.
 
 Automatically configured to support auto-scaling through AWS Autoscaling Groups, this solution leverages an S3 bucket with CloudFront for user generated content between application servers. It also provisions an ElastiCache Redis cluster for cache. It configures SES with Easy DKIM for emails, and configures Route53 with convenient DNS entries.
@@ -16,13 +16,13 @@ The template ensure multi-level security by incorporating AWS IAM for federated 
 We support multiple availability zones using an RDS Aurora MySQL cluster and EC2 Auto Scaling Groups. However, only one instance at a time is supported.
 
 An optional email address is collected as part of the CloudFormation parameters as the AdminEmail parameter. This email is used as the initial login for the PeerTube instance and is not shared with any third party."
-"Highlight1": "Production-ready PeerTube v5.1.0 site, with search, email, and caching"
+"Highlight1": "Production-ready PeerTube v5.2.0 site, with search, email, and caching"
 "Highlight2": "Integrated with AWS Certificate Manager for HTTPS support"
 "Highlight3": "Logs in CloudWatch Logs, Remote access via Session Manager"
 "Product Category1": "Application Stacks"
 "Product Category2": "Media & Entertainment"
 "Product Category3": "Content Management"
-"Search Keywords": "peertube, social, instagram"
+"Search Keywords": "peertube, social, youtube"
 "Resource1_Name": "Ordinary Experts Product Page"
 "Resource1_URL": "https://ordinaryexperts.com/products/peertube-pattern/"
 "Resource2_Name": "Github Source Code and Documentation"
@@ -45,11 +45,11 @@ An optional email address is collected as part of the CloudFormation parameters 
 "Operating System Username": "ubuntu"
 "PIOPS Total": ""
 "AWS Services Required": "Amazon EC2, Amazon RDS, Amazon S3, Amazon CloudWatch, Amazon ElastiCache, Amazon VPC, Amazon SecretsManager, Amazon IAM, Amazon SNS, Amazon CertificateManager, Amazon CloudFormation"
-"3rd Party Software Included": "PeerTube v5.1.0, Ubuntu packages: curl git jq ntp unzip vim wget zip python-pip collectd ruby binutils git nginx AWS CloudFormation utilities, AWS CLI, AWS CloudWatch agent"
+"3rd Party Software Included": "PeerTube v5.2.0, Ubuntu packages: curl git jq ntp unzip vim wget zip python-pip collectd ruby binutils git nginx AWS CloudFormation utilities, AWS CLI, AWS CloudWatch agent"
 "Version Title": "{{version}}"
 "Release Notes": "See GitHub project for release notes."
 "Upgrade Instructions": "Re-run the stack to apply new infrastructure changes."
-"Product Access Instructions": "Run the stack, providing a valid parameters. When the stack creation completes, go to the outputs of the stack and open url in the outputs in your browser. To access the application servers, find the EC2 instance in the AWS console and \"Connect\" using the Session Manager option. For more detailed instructions, see the GitHub project."
+"Product Access Instructions": "Run the stack, providing a valid parameters. When the stack creation completes, go to the outputs of the stack and open url in the outputs in your browser. To access the application servers, find the EC2 instance in the AWS console and \"Connect\" using the Session Manager option. All information gathered by the PeerTube application is stored either on encrypted EBS volumes, in its encrypted Aurora database or on S3 using server-side encryption. To monitor for the health of the application, check the ALB Health Dashboard. Several IAM resources are provisioned as part of this product: SesInstanceUser IAM user - used to generate an Access Key for SMTP email sending via SES and to upload items to the PeerTube bucket. SesGenerateSMTPPasswordLambdaRole IAM role - used by Lambda to generate SMTP password based on Access Key and store in Secrets Manager. AsgInstanceRole IAM role - attached to EC2 instance and allows for association of EBS and ENIs as well as downloading artifacts from S3. AsgSubnetToAzLambdaRole IAM role - attached to the AsgSubnetToAzLambda function which maps subnets to AZs. For network configuration, please reference the architecture diagram. For a pricing breakdown, please reference the AWS Calculator link. For more detailed instructions, see the GitHub project."
 "Endpoint URL Protocol": "http/https"
 "Endpoint URL Port": "80/443"
 "Endpoint URL Relative URL": "/"
