--- a/plf_config.yaml
+++ b/plf_config.yaml
@@ -1,7 +1,7 @@
 ---
 "Product Slug": "peertube"
-"Product ID": ""
-"Product Code": ""
+"Product ID": "4b0e2889-01ca-46e9-9f02-54b48010ddc4"
+"Product Code": "4fypvegblvwih694umvela6ro"
 "Accessibility": "Public"
 "SKU": "OE_PATTERNS_PEERTUBE"
 "Software by": "Ordinary Experts"
@@ -56,11 +56,11 @@ An optional email address is collected as part of the CloudFormation parameters 
 "Countries to include": ""
 "Countries to exclude": ""
 # EULA: https://docs.aws.amazon.com/marketplace/latest/userguide/standardized-license-terms.html
-"End User License Agreement URL": "https://s3.amazonaws.com/EULA/Standard+Contract+for+AWS+Marketplace+2019-04-24.pdf"
+"End User License Agreement URL": "https://s3.amazonaws.com/aws-mp-standard-contracts/Standard-Contact-for-AWS-Marketplace-2022-07-14.pdf"
 # region availability fields are here, i.e. "me-south-1 Availability"
 "Make available in all future U.S. regions": "FALSE"
 "Make available in all future non-U.S. regions": "FALSE"
-"Recommended Instance Type": "m5.xlarge"
+"Recommended Instance Type": "c7g.medium"
 "Make available for all future instance types": "FALSE"
 # instance availability fields are here, i.e. "z1d.12xlarge Availability"
 "Pricing Model": "Hourly_Annual"
